集約・関連などの見直し

--- a/docs/2. domain model.md
+++ b/docs/2. domain model.md
@@ -17,8 +17,8 @@ classDiagram
     String 解説
   }
 
-  Question "1" --> "1" Answer : 正解
-  Question "1" --> "2" Answer : 不正解
+  Question "1" *-- "1" Answer : 正解
+  Answer "2" --> "1" Question : 不正解
 
   class Answer {
     String 回答文
